--- a/package.json
+++ b/package.json
@@ -1,33 +1,31 @@
 {
-  "name": "vyron-enterprise",
+  "name": "vyron-ai",
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 3000",
+    "dev": "next dev",
     "build": "next build",
-    "start": "next start -p 3000",
-    "lint": "next lint",
-    "format": "prettier --write .",
-    "worker": "node worker/process-jobs.js"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "hls.js": "^1.4.0",
-    "next": "13.4.7",
+    "next": "14.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "@upstash/redis": "^1.19.0",
-    "stripe": "^12.0.0",
-    "@sentry/nextjs": "^7.47.0",
-    "zustand": "^4.4.0",
-    "axios": "^1.4.0"
+    "clsx": "2.1.1",
+    "axios": "1.6.7",
+    "swr": "2.2.4",
+    "@headlessui/react": "1.7.17",
+    "@heroicons/react": "2.0.18"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.24",
-    "tailwindcss": "^3.5.4",
-    "eslint": "^8.0.0",
-    "prettier": "^2.8.0",
-    "jest": "^29.5.0",
-    "lighthouse-ci": "^0.7.0"
+    "autoprefixer": "10.4.16",
+    "postcss": "8.4.33",
+    "tailwindcss": "3.4.1",
+    "eslint": "8.56.0",
+    "eslint-config-next": "14.2.3"
+  },
+  "engines": {
+    "node": "18.x"
   }
 }
