--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,4 @@
 {
-  "builds": [{ "src": "next.config.js", "use": "@vercel/next" }],
-  "routes": [{ "src": "/(.*)", "dest": "/" }]
+  "version": 2,
+  "framework": "nextjs"
 }
